# git-semantic-search

./: .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md
.github/: renovate.json
.github/workflows/: release.yaml
src/: main.rs
src/cli/: commands.rs  mod.rs
src/embedding/: encode.rs  mod.rs  model.rs
src/git/: diff.rs  mod.rs  parser.rs
src/index/: builder.rs  mod.rs  storage.rs  update.rs
src/search/: engine.rs  filter.rs  mod.rs
